View Issue Details

IDProjectCategoryView StatusLast Update
0023085Open CASCADEOCCT:Application Frameworkpublic2012-04-13 11:32
ReporterszyAssigned Toszy 
PrioritynormalSeveritymajor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.3 
Target Version6.5.3Fixed in Version6.5.3 
Summary0023085: Call of tcl DFBrowser leads to error message
DescriptionAttempt to call tcl DFBrowser lead to the next error message:
=> invalid command name "dftree"
Steps To Reproduce>>pload ALL
>>help DFBrowse
## DFBrowse : Creates a browser on a df: DFBrowse dfname [browsername]
>>NewDocument D MDTV-Standard
>>DFBrowse D
## ==> invalid command name "dftree"
TagsNo tags attached.
Test case numberchl 934 Z6

Attached Files

  • Z6 (580 bytes)

Activities

szy

2012-04-10 19:22

manager   ~0020326

Last edited: 2012-04-10 19:23

The problem is fixed by loading and evaluating the 'dftree.tcl' inside the command (if found at the default location: DrawResources). If the *.tcl is not found - the previous behavior is used.
Branch CR23085 is created and ready for review.

abv

2012-04-11 09:36

manager   ~0020327

Reviewed, with the following remarks (all corrected):
- Original code did not compile due to missing #include <OSD_File.hxx>
- The script does not work as-is in OCCT Visual Studio environment because environment variable DRAWHOME is not defined in that environment. WOK should be corrected.
- Redundant comments removed
- Code simplified
- Error messages added

Please test

apn

2012-04-11 15:05

administrator  

Z6 (580 bytes)

apn

2012-04-11 15:08

administrator   ~0020331

Dear BugMaster,
      Workbench KAS:dev:apn-23085-occt was created from git branch CR23085 (and apn-23085-products from svn trunk) and compiled on Linux platform.
    
      There are not regressions in apn-23085-products regarding to KAS:dev:products-20120330-opt

      Test case for this fix is chl 934 Z6. It's OK.
      
      See results in /QADisk/occttests/results/KAS/dev/apn-23085-products_11042012/lin
      See reference results in /QADisk/occttests/results/KAS/dev/products-20120330-opt_30032012/lin
      See test cases in /QADisk/occttests/tests/ED

Related Changesets

occt: master 409cc8d1

2012-04-12 09:54:51

szy

Details Diff
0023085: Call of tcl DFBrowser leads to error message

Fix the problem of bug ID 23085. Now dftree.tcl script is loaded (if found) inside the command.
Compilation problem fixed (missing include), redundant comments removed, code simplified, error messages added
Affected Issues
0023085
mod - src/DDF/DDF_BrowserCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2012-04-06 15:34 szy New Issue
2012-04-06 15:34 szy Assigned To => szy
2012-04-10 19:22 szy Note Added: 0020326
2012-04-10 19:22 szy Assigned To szy => abv
2012-04-10 19:22 szy Status new => resolved
2012-04-10 19:23 szy Note Edited: 0020326
2012-04-11 09:36 abv Note Added: 0020327
2012-04-11 09:36 abv Assigned To abv => szy
2012-04-11 09:36 abv Status resolved => reviewed
2012-04-11 09:36 abv Target Version 6.5.4 => 6.5.3
2012-04-11 10:19 apn Assigned To szy => apn
2012-04-11 12:59 apn Test case number => chl 934 Z6
2012-04-11 15:05 apn File Added: Z6
2012-04-11 15:08 apn Note Added: 0020331
2012-04-11 15:09 apn Assigned To apn => bugmaster
2012-04-11 15:09 apn Status reviewed => tested
2012-04-13 11:32 szy Changeset attached => occt master 409cc8d1
2012-04-13 11:32 szy Assigned To bugmaster => szy
2012-04-13 11:32 szy Status tested => verified
2012-04-13 11:32 szy Resolution open => fixed